--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "WebShellOrb Mailer"
 authors = ["Sergey M <yamldeveloper@proton.me>"]
 license = "Unlicense"
+readme = "README.md"
+homepage = "https://github.com/s3rgeym/WSOMailer"
+exclude = [".git"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
